# softRender

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/01_inOneWeekend/: CMakeLists.txt  camera.hpp  vec3.hpp
sources/01_rayTracing/: CMakeLists.txt  camera.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
sources/02_theNextWeek/: CMakeLists.txt  aabb.hpp  bvh.hpp  camera.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
